<resources>
    <string name="app_name">CollapsibleCalendarView</string>

    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="content_description_ll_calendar_expand">Expand calendar button</string>
    <string name="content_description_ll_calendar_collapse">Collapse calendar button</string>
    <string name="content_description_rl_options_button">Options menu button</string>
    <string name="content_description_rl_today_button">Select today button</string>
    <string name="content_description_iv_previous_week_button">Previous week button</string>
    <string name="content_description_iv_next_week_button">Next week button</string>
    <string name="content_description_iv_previous_month_button">Previous month button</string>
    <string name="content_description_iv_next_month_button">Next month button</string>
    <string name="content_description_monday">Monday</string>
    <string name="content_description_tuesday">Tuesday</string>
    <string name="content_description_wednesday">Wednesday</string>
    <string name="content_description_thursday">Thursday</string>
    <string name="content_description_friday">Friday</string>
    <string name="content_description_saturday">Saturday</string>
    <string name="content_description_sunday">Sunday</string>
</resources>
