<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:paddingEnd="16dp"
    tools:paddingStart="16dp">

    <RelativeLayout
        android:id="@+id/layout_btn_group_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageView
            android:id="@+id/btn_prev_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="2dp"
            android:contentDescription="@string/content_description_iv_previous_week_button"
            app:srcCompat="@drawable/left_icon" />

        <ImageView
            android:id="@+id/btn_next_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="2dp"
            android:contentDescription="@string/content_description_iv_next_week_button"
            app:srcCompat="@drawable/right_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_btn_group_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageView
            android:id="@+id/btn_prev_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="2dp"
            android:contentDescription="@string/content_description_iv_previous_month_button"
            app:srcCompat="@drawable/left_icon" />

        <ImageView
            android:id="@+id/btn_next_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="2dp"
            android:contentDescription="@string/content_description_iv_next_month_button"
            app:srcCompat="@drawable/right_icon" />

    </RelativeLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp">

        <LinearLayout
            android:id="@+id/expand_collapse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/content_description_ll_calendar_expand"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/frame_today_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="8dp"
                android:paddingEnd="10dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:text="Jun 2015" />

            <com.hyperexternal.collapsiblecalendarview.view.ExpandIconView
                android:id="@+id/expandIcon"
                android:layout_width="16dp"
                android:layout_height="30dp"
                android:contentDescription="@null"
                android:importantForAccessibility="no"
                android:visibility="visible"
                app:eiv_animationDuration="300"
                app:eiv_color="#000"
                app:eiv_colorIntermediate="@android:color/black"
                app:eiv_colorLess="@android:color/black"
                app:eiv_colorMore="@android:color/black"
                app:eiv_roundedCorners="true"
                app:eiv_switchColor="true" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/frame_filter_icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/content_description_rl_options_button"
            android:gravity="center"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/filter_icon"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@null"
                android:gravity="center"
                android:src="@drawable/options" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frame_today_icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/content_description_rl_today_button"
            android:gravity="center"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/frame_filter_icon"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/today_icon"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@null"
                android:gravity="center_horizontal"
                android:src="@drawable/today" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.hyperexternal.collapsiblecalendarview.view.BounceScrollView
        android:id="@+id/bounce_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/table_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingBottom="30dp">

            </TableLayout>

            <com.hyperexternal.collapsiblecalendarview.view.LockScrollView
                android:id="@+id/scroll_view_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <TableLayout
                    android:id="@+id/table_body"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:isScrollContainer="true"
                    android:orientation="horizontal">

                </TableLayout>

            </com.hyperexternal.collapsiblecalendarview.view.LockScrollView>
        </LinearLayout>
    </com.hyperexternal.collapsiblecalendarview.view.BounceScrollView>


</LinearLayout>